[package]
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
edition = "2021"
license = "MIT"
name = "examples"

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "dict_store"
path = "src/dict_store.rs"

[dependencies]
pajamax = {path="../pajamax/"}
prost = "0.13.5"
async-trait = "0.1"
local-sync = "0.1"
compio = { version = "0.18", features = ["net"] }

[build-dependencies]
prost-build = "0.13.5"
pajamax-build = {path="../pajamax-build/"}
