[package]
name = "pajamax-build"
version = "0.4.0"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Codegen module of `pajamax` gRPC implementation."
license = "MIT"
repository = "https://github.com/WuBingzheng/pajamax-build"
documentation = "https://docs.rs/pajamax-build"
keywords = ["grpc", "protobuf", "compio", "io_uring", "async"]
categories = ["network-programming"]

[dependencies]
prost-build = "0.13"
