[package]
name = "pajamax"
version = "0.4.0"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast gRPC server framework built on compio."
license = "MIT"
repository = "https://github.com/WuBingzheng/pajamax"
documentation = "https://docs.rs/pajamax"
keywords = ["grpc", "protobuf", "compio", "io_uring", "async"]
categories = ["network-programming"]

[dependencies]
prost = "0.13"
compio = { version = "0.18", features = ["io", "net", "runtime"] }
local-sync = "0.1"
log = { version = "0.4", optional = true }
async-trait = "0.1"
socket2 = "0.5"

[features]
default = ["log"]
