[package]
name = "pajamax"
version = "0.4.0"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast gRPC server framework built on compio."
license = "MIT"
repository = "https://github.com/WuBingzheng/pajamax"
documentation = "https://docs.rs/pajamax"
keywords = ["grpc", "protobuf", "compio", "io_uring", "async"]
categories = ["network-programming"]

[dependencies]
prost = "0.14"
bytes = "1"
compio = { git = "https://github.com/compio-rs/compio", rev = "b06ff34caaa24c516821fe16da50191834524660", features = ["io", "net", "runtime"] }
futures-util = { version = "0.3", default-features = false }
local-sync = "0.1"
log = { version = "0.4", optional = true }
async-trait = "0.1"
socket2 = { version = "0.5", features = ["all"] }
flume = "0.11"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zstd = { version = "0.13", default-features = false }

[features]
default = ["log"]
